deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: livin-matrix-staging
  labels:
    name: livin-matrix-staging
